--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/parthnamdev/data-encryption-decryption#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^6.0.8"
+    "mongoose": "^6.0.8",
+    "uuid": "^8.3.2"
   }
 }
