--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/parthnamdev/data-encryption-decryption#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
